# pytorch-rocm-gtt

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  build.py  docker_build_and_push.sh  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml  release.yml
pytorch_rocm_gtt/: __init__.py  __main__.py  base.py  gttalloc.c
tests/: test_base.py
