[tool.poetry]
name = "a-flask-test"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
mypy = "^1.9.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytorch_rocm_gtt = 'pytorch_rocm_gtt.__main__:main'
